# puffer-explore

./: .gitignore  CONTRIBUTING_TO_PUFFERLIB.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: count_breakout.ini  icm_squared.ini  ngu_nethack.ini  noveld_breakout.ini  ride_squared.ini  rnd_breakout.ini  rnd_montezuma.ini
docker/: Dockerfile  docker-compose.yml  probe_pufferlib.py  run.sh
puffer_explore/: benchmark.py  compat.py  config.py  integration.py  networks.py  shared_encoder.py
puffer_explore/kernels/: count_explore.cu
puffer_explore/methods/: base.py  count_based.py  ensemble.py  go_explore.py  icm.py  ngu.py  noveld.py  ride.py  rnd.py
results_minigrid/: count_based_KeyCorridorS4R3.json  count_based_KeyCorridorS6R3.json  icm_KeyCorridorS4R3.json  icm_KeyCorridorS6R3.json  ngu_KeyCorridorS4R3.json  ngu_KeyCorridorS6R3.json  none_KeyCorridorS4R3.json  none_KeyCorridorS6R3.json  noveld_KeyCorridorS4R3.json  noveld_KeyCorridorS6R3.json  rnd_KeyCorridorS4R3.json  rnd_KeyCorridorS6R3.json  summary.json
results_mujoco/: count_based_HalfCheetah-v4.json  count_based_Hopper-v4.json  ngu_HalfCheetah-v4.json  ngu_Hopper-v4.json  none_HalfCheetah-v4.json  none_Hopper-v4.json  noveld_HalfCheetah-v4.json  noveld_Hopper-v4.json  rnd_HalfCheetah-v4.json  rnd_Hopper-v4.json  summary.json
scripts/: benchmark_minigrid.py  benchmark_mujoco.py  benchmark_training.py  plot_from_terminal.py  plot_results.py  test_e2e_pufferlib.py  train_pufferlib.py
tests/: test_all.py
